# backend/routes/user_routes.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"github.com/dratsisama/Kermisys/backend/controllers"
+	"github.com/dratsisama/Kermisys/backend/middlewares"
 	"github.com/gin-gonic/gin"
 )
 
@@ -9,7 +10,7 @@ func initializeUserRoutes(r *gin.RouterGroup) {
 	userRoutes := r.Group("/user")
 	{
 		// General user routes
-		userRoutes.GET("/:username", controllers.GetUserHandler)
-		userRoutes.POST("/", controllers.CreateUserHandler)
+		userRoutes.GET("/:username", middlewares.RoleMiddleware("admin", "organisateur"), controllers.GetUserHandler)
+		userRoutes.POST("/", middlewares.RoleMiddleware("admin", "organisateur"), controllers.CreateUserHandler)
 	}
 }
